Fixed table bug that covered the buttons, and added color functionality with buttons

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .table{
-  height: 100%;
+  margin-top: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
